# prediction-powered-adaptive-shrinkage

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/amazon/: amazon_review.h5  amazon_review_raw.h5
data/galaxy/: galaxy_test_prediction.csv
data/lmarena/: convert_summary.py  download_dataset.py  prompt.py  run_judge.py  run_judge_skywork.py  run_scoring_pipeline.sh  server_args.yaml  skywork_server_args.yaml  summarize_dataset.py
data/lmarena/analysis/: accuracy_analysis.ipynb  predictor_analysis.ipynb  predictor_analysis.py  summary_stats.txt
data/lmarena/clean_data/: clean_summary.csv
data/lmarena/sample_data/: llm_pair_summary.csv  llm_pair_summary_all_languages.csv  llm_pair_summary_single_turn.csv  sample-lmarena-data.csv
src/: config.py  estimators.py  experiments.py  requirements.txt  run_timing_benchmark.py  utils.py
src/datasets/: __init__.py  amazon_review.py  dataset.py  galaxy_zoo.py  lmarena.py  synthetic_model.py
src/estimators/: __init__.py  eb_estimators.py  legacy_estimators.py  pas_estimators.py  ppi_estimators.py  simple_estimators.py  uni_pas_estimators.py
src/intervals/: __init__.py  eb_cis.py  ppi_cis.py  simple_cis.py
src/pas/: config.py  experiments.py  utils.py
src/pas/datasets/: __init__.py  amazon_review.py  galaxy_zoo.py  lmarena.py  synthetic_model.py
src/pas/estimators/: __init__.py  eb_estimators.py  legacy_estimators.py  pas_estimators.py  (+3 more)
src/scripts/: lmarena_experiments.ipynb  run_amazon_review.py  run_galaxy_zoo.py  run_lmarena.py  run_synthetic.py  run_synthetic_ci.py  run_timing_benchmark.py
(+4 files in other folders)
