[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pas"
version = "0.1.0"
description = "Prediction-Powered Adaptive Shrinkage Estimation"
requires-python = ">=3.8"
dependencies = [
    "h5py>=3.8",
    "matplotlib>=3.5",
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "seaborn>=0.12",
    "tqdm>=4.66",
]

[project.optional-dependencies]
notebook = ["jupyter", "ipykernel"]
finetune = ["torch>=2.5", "transformers>=4.45"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.csv", "*.h5"]
